// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSheet normal spec Empty Placeholder should render empty placeholder 1`] = `
Object {
  "fill": "",
  "height": 41,
  "margin": Object {
    "bottom": 24,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "name": "Empty",
  "width": 64,
  "x": 367.5,
  "y": 292.5,
}
`;

exports[`TableSheet normal spec Empty Placeholder should render empty placeholder by custom col height 1`] = `
Object {
  "fill": "",
  "height": 41,
  "margin": Object {
    "bottom": 24,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "name": "Empty",
  "width": 64,
  "x": 267.5,
  "y": 317.5,
}
`;

exports[`TableSheet normal spec Empty Placeholder should render empty placeholder by custom col width 1`] = `
Object {
  "fill": "",
  "height": 41,
  "margin": Object {
    "bottom": 24,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "name": "Empty",
  "width": 64,
  "x": 223,
  "y": 232.5,
}
`;

exports[`TableSheet normal spec Empty Placeholder should render empty placeholder by custom icon and description 1`] = `
Object {
  "fill": "",
  "height": 41,
  "margin": Object {
    "bottom": 24,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "name": "Trend",
  "width": 64,
  "x": 367.5,
  "y": 292.5,
}
`;

exports[`TableSheet normal spec Empty Placeholder should render empty placeholder by custom icon and description style 1`] = `
Object {
  "fill": "green",
  "height": 100,
  "margin": Object {
    "bottom": 80,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "name": "Empty",
  "width": 100,
  "x": 349.5,
  "y": 263,
}
`;

exports[`TableSheet normal spec Empty Placeholder should render empty placeholder for en_US lang 1`] = `
Object {
  "fill": "",
  "height": 41,
  "margin": Object {
    "bottom": 24,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "name": "Empty",
  "width": 64,
  "x": 367.5,
  "y": 292.5,
}
`;

exports[`TableSheet normal spec Empty Placeholder should render empty placeholder if contains horizontal scrollbar 1`] = `
Object {
  "fill": "",
  "height": 41,
  "margin": Object {
    "bottom": 24,
    "left": 0,
    "right": 0,
    "top": 0,
  },
  "name": "Empty",
  "width": 64,
  "x": 367.5,
  "y": 292.5,
}
`;
